--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "git.ignoreLimitWarning": true,
     "cSpell.ignoreWords": [
-        "infowin"
+        "infowin",
+        "jsxdev",
+        "nsort"
     ]
 }
