--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "git.ignoreLimitWarning": true,
     "cSpell.ignoreWords": [
+        "fname",
         "infowin",
         "jsxdev",
         "nsort"
